@@ -1,3 +1,8 @@
+2006-09-09  Marcus Meissner  <marcus@jet.franken.de>
+	
+	* library.c: Uses short timeout during startup, but
+	  longer timeouts later on.
+
 2006-09-03  Marcus Meissner  <marcus@jet.franken.de>
 
 	* library.c: Implemented MTP Abstract Playlist upload.
